fix name in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name":"sasezaki/backbeard",
+    "name":"sasezaki/backbeard-skeleton",
     "description": "Backbeard Skeleton",
     "license": "BSD-3-Clause",
     "require": {
